// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failing updateOne unique field metadata should fail when updating to unique field metadata if it has composite type without unique subfields 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_INVALID_TYPE_FOR_UNIQUE",
              "message": "Unique index cannot be created for field fullNameFieldForUnique of type FULL_NAME",
              "userFriendlyMessage": "FULL_NAME fields cannot be unique.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "IDX_UNIQUE_49e432061a11056486c4252c16b",
          },
          "status": "fail",
          "type": "create_index",
        },
      ],
      "objectMetadata": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while updating field",
  "name": "GraphQLError",
}
`;

exports[`failing updateOne unique field metadata should fail when updating to unique field metadata if it has custom default value 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_INVALID_DEFAULT_VALUE",
              "message": "Unique index cannot be created for field fieldWithDefault of type TEXT",
              "userFriendlyMessage": "TEXT fields cannot have a default value.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "IDX_UNIQUE_0d1ad1b52f381c8062b3740689b",
          },
          "status": "fail",
          "type": "create_index",
        },
      ],
      "objectMetadata": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while updating field",
  "name": "GraphQLError",
}
`;
